--- a/web_static/0-index.html
+++ b/web_static/0-index.html
@@ -5,12 +5,19 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AirBnB Clone</title>
 </head>
-<body>
-    <div class="header" style="background-color: #FF0000;width: 100%;height: 70px;">
-        <p></p>
-    </div>
-    <div class="footer" style="background-color: #00FF00; margin: bottom -10px; ; width:100%; height: 60px;">
-        <p style="text-align: center; padding: 20px;">Best School</p>
-    </div>
+<body style="margin: 0; padding: 0px;">
+    <header style="background-color: #FF0000; height: 70px; width: 100%;">
+    </header>
+    <footer style="align-items:center;
+                    background-color:  #00FF00;
+                    bottom: 0;
+                    display: flex;
+                    height: 60px;
+                    justify-content: center;
+                    position: absolute;
+                    width: 100%;
+                    ">
+        Best School
+    </footer>
 </body>
 </html>
